add universal box sizing

--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -378,7 +378,11 @@ template {
     display: none;
 }
 
-/* Resetting the CSS stylesheet for browser consistency */
+/* Add universal box-sizing */
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
